feature(api): update api route names
